--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,2 +1,8 @@
 /* Variables and mixins declared here will be available in all other SCSS files */ /* https://github.com/jgthms/bulma/issues/1293 */
 $body-overflow-y: auto;
+
+// Table Options
+$table-background-color: #404040;
+$table-head-cell-color: #dee2e6;
+$table-color: #dee2e6;
+$table-row-hover-background-color: #515151;
