Make console use a white background

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,3 +6,6 @@ $primary: #dee2e6;
 // Panel Options
 $panel-block-color: #dee2e6;
 $input-hover-color: #8a8d91;
+
+// Table Options
+$table-background-color: #dee2e6;
